--- a/elchin.html
+++ b/elchin.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   
-<button type="button" onclick="alert('Oh oooh! Tu uzspiedi uz pogas!')">Click šeit!</button>
+<button type="button" onclick="alert('Tev vel vel nepienakas cepums!')">DOD CEPUMU!</button>
 
 </body>
 </html>
