--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
-<a href="otra_lapa.html">Spied seit!</a>
+<a href="elchin.html">Spied seit!</a>
   
 </body>
 </html>
