--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <a href="elchin.html">Spied seit!</a>
   
-<p><a href="bilde.html">Spied seit!</a></p>
+<p><a href="bilde.html">Cepumu bilde!</a></p>
   
 </body>
 </html>
